// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PolarimetryModesSelector should render correctly with no polarimetry modes 1`] = `
.c1.c1 {
  width: 18px;
  height: 18px;
}

.c0.c0 {
  margin-top: 5px;
}

.c0 label {
  padding-right: 10px;
}

<PolarimetryModesSelector
  onChange={[MockFunction]}
  polarimetryModes={Set {}}
>
  <styled.div>
    <div
      className="c0"
    >
      <label>
        <styled.input
          checked={false}
          data-test="linear"
          onChange={[Function]}
          value="Linear"
        >
          <input
            checked={false}
            className="c1 checkbox"
            data-test="linear"
            onChange={[Function]}
            type="checkbox"
            value="Linear"
          />
        </styled.input>
        Linear
      </label>
      <label>
        <styled.input
          checked={false}
          data-test="linear-hi"
          onChange={[Function]}
          value="Linear Hi"
        >
          <input
            checked={false}
            className="c1 checkbox"
            data-test="linear-hi"
            onChange={[Function]}
            type="checkbox"
            value="Linear Hi"
          />
        </styled.input>
        Linear Hi
      </label>
      <label>
        <styled.input
          checked={false}
          data-test="circular"
          onChange={[Function]}
          value="Circular"
        >
          <input
            checked={false}
            className="c1 checkbox"
            data-test="circular"
            onChange={[Function]}
            type="checkbox"
            value="Circular"
          />
        </styled.input>
        Circular
      </label>
      <label>
        <styled.input
          checked={false}
          data-test="all-stokes"
          onChange={[Function]}
          value="All Stokes"
        >
          <input
            checked={false}
            className="c1 checkbox"
            data-test="all-stokes"
            onChange={[Function]}
            type="checkbox"
            value="All Stokes"
          />
        </styled.input>
        All Stokes
      </label>
    </div>
  </styled.div>
</PolarimetryModesSelector>
`;

exports[`PolarimetryModesSelector should render correctly with polarimetry modes 1`] = `
.c1.c1 {
  width: 18px;
  height: 18px;
}

.c0.c0 {
  margin-top: 5px;
}

.c0 label {
  padding-right: 10px;
}

<PolarimetryModesSelector
  onChange={[MockFunction]}
  polarimetryModes={
    Set {
      "LINEAR",
      "CIRCULAR",
    }
  }
>
  <styled.div>
    <div
      className="c0"
    >
      <label>
        <styled.input
          checked={false}
          data-test="linear"
          onChange={[Function]}
          value="Linear"
        >
          <input
            checked={false}
            className="c1 checkbox"
            data-test="linear"
            onChange={[Function]}
            type="checkbox"
            value="Linear"
          />
        </styled.input>
        Linear
      </label>
      <label>
        <styled.input
          checked={false}
          data-test="linear-hi"
          onChange={[Function]}
          value="Linear Hi"
        >
          <input
            checked={false}
            className="c1 checkbox"
            data-test="linear-hi"
            onChange={[Function]}
            type="checkbox"
            value="Linear Hi"
          />
        </styled.input>
        Linear Hi
      </label>
      <label>
        <styled.input
          checked={false}
          data-test="circular"
          onChange={[Function]}
          value="Circular"
        >
          <input
            checked={false}
            className="c1 checkbox"
            data-test="circular"
            onChange={[Function]}
            type="checkbox"
            value="Circular"
          />
        </styled.input>
        Circular
      </label>
      <label>
        <styled.input
          checked={false}
          data-test="all-stokes"
          onChange={[Function]}
          value="All Stokes"
        >
          <input
            checked={false}
            className="c1 checkbox"
            data-test="all-stokes"
            onChange={[Function]}
            type="checkbox"
            value="All Stokes"
          />
        </styled.input>
        All Stokes
      </label>
    </div>
  </styled.div>
</PolarimetryModesSelector>
`;
